fixed spacing and headline, footer as well

--- a/css/myles.css
+++ b/css/myles.css
@@ -534,9 +534,10 @@ ul li {
 }
 
 .symbol {
-  /* display: inline-block; */
+  display: inline-block;
   /* float: left; */
   padding: 0 10px 0 0;
+  margin-right: 0;
 }
 
 .symbol > div {
@@ -620,13 +621,13 @@ ul li {
 }
 
 .test {
-  padding: 10px 10px 20px 0;
+  padding: 10px 20px 20px 0;
   display: inline-block;
   /* position: f*/
 }
 
 .test > h4 {
-  padding-left: 10px;
+  /*padding-left: 10px;*/
   /*display: inline-block;*/
   /* position: f
 }
